--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,5 +3,7 @@
     
     <div class="current-items-container">
         <h4>Current</h4>
-
+        <div ng-repeat="project in projectList">
+            {{project.name}}
+        </div>
 </div>
