fix missing files

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="ProjectCtrl">
+<div class="container" ng-controller="DashboardCtrl">
     <h1>Planner</h1>
     
     <div class="current-items-container">
