--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,8 +1,8 @@
-<div class="container" ng-controller="DashboardCtrl">
+<div class="container" ng-controller="ProjectCtrl">
     <h1>Planner</h1>
     
     <div class="current-items-container">
-        <h4>Current</h4>
+        <h4>Your Projects:</h4>
         <div ng-repeat="project in projectList">
             {{project.name}}
         </div>
